openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-rest-project-service
  name: simple-rest-project
spec:
  selector:
    app: simple-rest-project
